part 1 and 2 written and tested

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(disk_io_performance_analysis C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(disk_io_performance_analysis run.c run2.c utils.c utils.h temp/temp.c)
+add_executable(disk_io_performance_analysis run.c run2.c utils.c utils.h temp/temp.c analysis.c)
